<resources>
    <string name="app_name">Text Based Adventure game</string>
    <string name="welcome">WELCOME...</string>
    <string name="to_the">to the</string>
    <string name="text_based">Text-Based</string>
    <string name="adventure">Adventure</string>
    <string name="game">GAME</string>
    <string name="enter"><![CDATA[ Enter --> ]]></string>
    <string name="cryndelwald">Cryndelwald</string>
    <string name="land_of_the_beginning">Land of \'The Beginning\'</string>
    <string name="analyse_class">Analyse Class</string>
    <string name="hybrid">Wow! Seems like you\'re a Hybrid!</string>
    <string name="elf">ELF -- high Spd.</string>
    <string name="knight">KNIGHT -- high Atk.</string>
    <string name="wizard">WIZARD -- high Int.</string>
    <string name="guardian">GUARDIAN -- high Def.</string>
    <string name="pick_your_class">Pick Your Class</string>
    <string name="the_sorting_crystal">The Sorting Crystal</string>
    <string name="your_stats">Your Stats have been defrosted and energized by</string>
    <string name="atk_50">ATK -- 50</string>
    <string name="def_30">DEF -- 30</string>
    <string name="int_20">INT -- 20</string>
    <string name="spd_15">SPD -- 15</string>
    <string name="proceed"><![CDATA[Proceed -->]]></string>
    <string name="atk_30">ATK -- 30</string>
    <string name="def_15">DEF -- 15</string>
    <string name="int_50">INT -- 50</string>
    <string name="spd_20">SPD -- 20</string>
    <string name="valoria">You have Travelled to VALORIA</string>
    <string name="the_land_of_knights">Knight HeadQuarters</string>
    <string name="first_quest">Embark on your first Quest --></string>
    <string name="knight_quest">Quest presented by: Village Elder of Elderswood. This revolves around an ominous presence termed as \'The Shadow Lord\' from an old folklore. The said Lord\'s followers (goblins) have been performing an ancient ritual to bring him back, and the villagers are being sacrificed as part of this dark ceremony, disappearing one by one as the ritual progresses. REQUEST: To put an end to this ritual. VENUE: Meet me at the townhall of Elderswood for guidance. REWARD: 2500 Ryuls, Iron Armour Set.</string>
    <string name="travel_to_elderswood"><![CDATA[Travel to Elderswood -->]]></string>
    <string name="knight_help">You, noble knight, must stop this evil before it is too late. Start your journey into the Blackthorn Forest and uncover the dark ritual that threatens us all.</string>
    <string name="meet_elder">You meet the Village Elder in the town hall of Elderswood. His face is grave, and the room is dimly lit by flickering torches. \'The Shadow Lord has begun his return,\' he says in a low, serious voice. \'His followers have taken our people, sacrificing them one by one.</string>
    <string name="blacksmith">The Elder recommends you to visit the blacksmith for refining your equipment and to grab some health potions</string>
    <string name="blackthorn_forest"><![CDATA[BlackThorn Forest -->]]></string>
    <string name="gotoblacksmith"><![CDATA[Go To Blacksmith -->]]></string>
    <string name="refine_weapon">Refine Weapon (+5 Attack)</string>
    <string name="fortify_armor">Fortify Armor (+5 Defense)</string>
    <string name="health_potions">Receive Health Potions (+3)</string>
    <string name="blackthorn_forest2">BlackThorn Forest</string>
    <string name="pick_route">You have entered the Blackthorn Forest. An uncanny aura sets in. Which route will you take?</string>
    <string name="winding_path">Winding Path</string>
    <string name="shadowed_grove">Shadowed Grove</string>
    <string name="whispering_trail">Whispering Trail</string>
</resources>